...
                            .padding(16.dp)
                            .size(160.dp)
                            .align(Alignment.CenterHorizontally)
                    )

                    Text(
                        text = "ایجاد حساب کاربری",
                        style = MaterialTheme.typography.titleMedium,
                        modifier = Modifier.align(Alignment.CenterHorizontally),
                        color = MaterialTheme.colorScheme.onBackground
                    )
                }
            }
...
